<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luk.presentspresents.MainActivity" >
    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_pause"/>
    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_start"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_sound_on_off"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sound_on_off"/>
	<item
        android:id="@+id/action_main_menu"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_main_menu"/>
	<item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
</menu>
